reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__empty_variants_untagged.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::TestEmptyVariantsUntagged"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::TestEmptyVariantsUntagged"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::TestEmptyVariantsUntagged",
        "representation": "none",
        "variants": [
          {
            "name": "Empty",
            "fields": "none"
          },
          {
            "name": "EmptyUnit",
            "fields": {
              "unnamed": []
            }
          },
          {
            "name": "EmptyStruct",
            "fields": {
              "named": []
            }
          }
        ]
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::TestEmptyVariantsUntagged",
        "representation": "none",
        "variants": [
          {
            "name": "Empty",
            "fields": "none"
          },
          {
            "name": "EmptyUnit",
            "fields": {
              "unnamed": []
            }
          },
          {
            "name": "EmptyStruct",
            "fields": {
              "named": []
            }
          }
        ]
      }
    ]
  }
}
